--- a/Progetto1/Progetto1.vcxproj
+++ b/Progetto1/Progetto1.vcxproj
@@ -84,6 +84,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="binario.cpp" />
+    <ClCompile Include="Fermata.cpp" />
+    <ClCompile Include="KeyListTrain.cpp" />
     <ClCompile Include="messaggi\Fault.cpp" />
     <ClCompile Include="Form1.cpp" />
     <ClCompile Include="Itinerario.cpp" />
@@ -114,6 +116,8 @@
     <ClCompile Include="messaggi\StateCDB.cpp" />
     <ClCompile Include="messaggi\StateScudetti.cpp" />
     <ClCompile Include="messaggi\StateSegnale.cpp" />
+    <ClCompile Include="physicalTrain.cpp" />
+    <ClCompile Include="SingleTrainInfoForm.cpp" />
     <ClCompile Include="stazione.cpp" />
     <ClCompile Include="tabellaFermate.cpp" />
     <ClCompile Include="tabellaItinerari.cpp" />
@@ -121,10 +125,13 @@
     <ClCompile Include="tableLayoutPanelSingleItin.cpp" />
     <ClCompile Include="tomWriterTraceListener.cpp" />
     <ClCompile Include="messaggi\utility.cpp" />
+    <ClCompile Include="Train.cpp" />
+    <ClCompile Include="TrainInfo3.cpp" />
     <ClCompile Include="wdogcontrol.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="binario.h" />
+    <ClInclude Include="KeyListTrain.h" />
     <ClInclude Include="messaggi\Fault.h" />
     <ClInclude Include="Form1.h">
       <FileType>CppForm</FileType>
@@ -162,7 +169,9 @@
     <ClInclude Include="messaggi\StateCDB.h" />
     <ClInclude Include="messaggi\StateScudetti.h" />
     <ClInclude Include="messaggi\StateSegnale.h" />
+    <ClInclude Include="physicalTrain.h" />
     <ClInclude Include="resource2.h" />
+    <ClInclude Include="SingleTrainInfoForm.h" />
     <ClInclude Include="stazione.h" />
     <ClInclude Include="tabellaFermate.h" />
     <ClInclude Include="tabellaItinerari.h" />
@@ -170,6 +179,10 @@
     <ClInclude Include="tableLayoutPanelSingleItin.h" />
     <ClInclude Include="tomWriterTraceListener.h" />
     <ClInclude Include="messaggi\utility.h" />
+    <ClInclude Include="Train.h" />
+    <ClInclude Include="TrainInfo3.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="wdogcontrol.h" />
   </ItemGroup>
   <ItemGroup>
@@ -184,6 +197,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm2.resx">
       <DependentUpon>MyForm2.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TrainInfo3.resx">
+      <DependentUpon>TrainInfo3.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
