--- a/Progetto1/Progetto1.vcxproj.filters
+++ b/Progetto1/Progetto1.vcxproj.filters
@@ -171,6 +171,9 @@
     <ClCompile Include="TabellaOrario.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
+    <ClCompile Include="EventQueue.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -327,6 +330,21 @@
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="TabellaOrario.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="ConfigurazioneFermate.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="ConfigurazioneItinerari.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="EventQueue.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="Event.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="IEvent.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
